# regions-snap

./: README.md  ai_ocr.py  app.py  gunicorn.conf.py  main.py  offline_ocr.py  pyproject.toml  replit.nix
